ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.6.0-rc0
    • Affects Version/s: 2.5.5
    • Component/s: Security
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The invalid states are as follows:

      sslMode clusterAuthMode
      disabled sendKeyFile, sendX509, or x509
      allowSSL sendX509, or x509

      The above table must be checked at startup time. At runtime, only the following must be checked to preserve these invariants:

      sendKeyFile -> sendX509: Verify that sslMode is either preferSSL or requireSSL

            Assignee:
            Andreas Nilsson (Inactive)
            Reporter:
            Shaun Verch (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: