SERVER-12748 Prevent invalid sslMode and clusterAuthMode combinations